--- a/lib/Site/chats.html
+++ b/lib/Site/chats.html
@@ -25,7 +25,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="chats.html">Conversations</a></li>
+                <li><a href="chats.html">Conversations chat</a></li>
                 <li><a href="#" onclick="window.ChatApp.logout()">Sign Out</a></li>
             </ul>
         </div>
@@ -48,6 +48,7 @@
 <script src="js/site.js"></script>
 <script type="text/javascript">
     $(function () {
+        window.ChatApp.populateChats();
     });
 </script>
 </body>
